test_outputs/connlist/exposure_test_with_anp_5_entire_cluster_example_exposure_output.txt
0.0.0.0-255.255.255.255[External] => hello-world/workload-a[Deployment] : All Connections
0.0.0.0-255.255.255.255[External] => hello-world/workload-b[Deployment] : All Connections
hello-world/workload-a[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] => hello-world/workload-b[Deployment] : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
hello-world/workload-b[Deployment] => 0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] => hello-world/workload-a[Deployment] : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535

Exposure Analysis Result:
Egress Exposure:
hello-world/workload-a[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	=> 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
hello-world/workload-b[Deployment] 	=> 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	=> 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535

Ingress Exposure:
hello-world/workload-a[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-a[Deployment] 	<= 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
hello-world/workload-b[Deployment] 	<= 	0.0.0.0-255.255.255.255[External] : All Connections
hello-world/workload-b[Deployment] 	<= 	entire-cluster : SCTP 1-65535,TCP 1-79,81-65535,UDP 1-65535
